crates/strider/tests/snapshots/v3__ppc32be__complex__dispatch_on_flag.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "12" [label="φ f2", shape=house, fillcolor="#163030"];
  "5" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v14" [color="#888888", style=dashed];
  "v14" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "6" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "6" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x1000050c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "6" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "18" -> "6" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "17" -> "6" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "17" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "15" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "22" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "27" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "25" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "28" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0xc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "30" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "30" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "34" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "35" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "38" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "40" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "42" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "38" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "32" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0xffffffd0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0xffffffdc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "46" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "46" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "47" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" -> "46" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "25" -> "46" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0xffffffd8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "47" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "27" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" -> "47" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "25" -> "47" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "18" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="φ f1", shape=house, fillcolor="#163030"];
  "5" -> "11" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "50" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v51" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v51" [color="#888888", style=dashed];
  "v51" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "50" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="φ r4", shape=house, fillcolor="#163030"];
  "5" -> "10" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "18" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v52" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v52" [color="#888888", style=dashed];
  "v52" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "9" [label="φ r3", shape=house, fillcolor="#163030"];
  "5" -> "9" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "20" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v53" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v53" [color="#888888", style=dashed];
  "v53" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "8" [label="φ Mem", shape=house, fillcolor="#163030"];
  "5" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "15" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "6" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "54" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "54" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "55" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "55" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "57" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "58" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "57" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "59" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "61" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "61" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "59" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "63" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "65" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "67" -> "65" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "67" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "24" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "63" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "69" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "71" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "71" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "73" -> "71" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "73" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "74" -> "73" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" -> "73" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "75" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "76" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "75" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "77" -> "75" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "77" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "24" -> "77" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "78" -> "77" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
